Got navbar aligned correctly

--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,24 @@ html, body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     border-bottom: 1px solid lightgray;
 }
 
+#navContent {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+}
+
 #nameLogo {
-    text-align: center;
+    text-align: left;
     text-decoration: none;
     color: black;
+    margin-right: auto;
 }
 
 #navLinks {
@@ -34,8 +44,20 @@ html, body {
     justify-content: space-between;
 }
 
+#socials {
+    margin-left: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
 .navElement {
-    width: 20%;
+    width: 33%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .navItem {
@@ -54,3 +76,4 @@ html, body {
     color: gray;
     transition: .2s;
 }
+
